--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app">
+        
+    </div>
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
